@@ -70,9 +70,10 @@ Please visit http://aegisub.net to download latest version
   o Normal and SSA mode have been merged into one, all functionality available to both is now used at once. This is the same behavior as Sabbu has. (AMZ)
   o Next line on commit is now on by default.
   o Auto-commit will never change to the next line.
-  o When dragging line start/end markers, they will snap to keyframes or nearby subtitle start/end markers.
+  o When dragging line start/end markers, they will snap to keyframes or nearby subtitle start/end markers, hold down "Shift" to override this behaviour.
   o The "Play" shortcut will always play, regardless of whether it was already playing or not. There is a new shortcut for "Stop".
   o Styles for line start/end markers have changed.
+- Fixed loading of SRT and TXT files, which were causing an empty line to appear at the start of the file. (AMZ)
 
 
 = 1.10 beta - 2006.08.07 ===========================
